--- a/leopards.yaml
+++ b/leopards.yaml
@@ -2,10 +2,11 @@ team: Leopards
 
 manager: Luke
 
+coach : Oscar
+
 members:
 - Linda
 - William
 - David
-- olivia
-- hong
-- main
+- olivia 
+- Evie
